# conf-nauty

./: conf-nauty.opam
