opam-version: "2.0"
maintainer: "pikus3@list.pl"
homepage: "http://www.boost.org"
authors: "Piotr Cybulski"
bug-reports: "https://github.com/ocaml/opam-repository/issues"
license: "MIT"
depexts: [
  ["libnauty2-dev"] {os-family = "debian"}
  ["libnauty2-dev"] {os-distribution = "ubuntu"}
  ["libnauty-devel"] {os-distribution = "fedora"}
]
synopsis: "Virtual package relying on nauty"
description:
  "This package can only install if the libnauty library is installed on the system."
flags: conf
